# emir

./: .gitignore  .gitmodules  Readme.md  pyproject.toml
benchmarks/: Knife optim.ipynb
cv_embeddings/: README.md  cache_models.py  emb_datasets.py  embed.py  generate_embeddings.py
cv_embeddings/scripts/: evaluate_mis_target.py  train_eval_embedding_for_classification.py
cv_embeddings/slurms/: compute_classification_perfs.sh  compute_mis_target.sh
emir/: Readme.md  __init__.py  embedder_evaluator.py  emir.py
emir/estimators/: __init__.py  abstract_estimator.py  deficiency_estimator.py  distances.py  ftensordataloader.py  gan_loss.py  knife.py  knife_estimator.py
examples/tests/: Deficiency GAN High dim tests.ipynb  Deficiency GAN tests.ipynb  High dimensions controlled projections.ipynb
molecule/: Readme.md  analysis.ipynb  downstream_config.yaml  evaluation.py  expe.ipynb  experiments.ipynb  hpo_config.yaml  knife.yaml  main.py  main_downstream.py  main_downstream_DTI.py  make_fingerprint_continuous.py  notebook_DTI.ipynb  notebook_EMIR_conv.ipynb  parser_mol.py  precompute_3d.py  precompute_molf_descriptors.py  preprocess.py  preprocess_MoleOOD.py  requirements.txt  run_scattering_inv_wavelet.sh  submit_scattering_wavelets_jobs.sh  tdc_dataset.py  utils.py  utils_notebook.py
molecule/VAE/: model.py  run_VAE.py
molecule/bash_scripts/: emir_mol_MI_estimation.sh  mds_run.sh  precompute_3d.sh  run_scattering_inv_wavelet.sh  (+1 more)
nlp_embeddings/: Readme.md
output/: corr_mi_tasks.csv  corr_mi_tasks_large.csv
talks_figures/: Concepts separations.ipynb
(+177 files in other folders)
